--- a/docs/07.功能/01.教程/01.介绍.md
+++ b/docs/07.功能/01.教程/01.介绍.md
@@ -32,13 +32,25 @@ git clone https://github.com/dromara/electron-egg.git
 git checkout -b demo remotes/origin/demo
 ```
 
-3. 安装依赖并运行
+3. 安装并运行
 ```bash
 # 安装依赖
 npm i
 
 # 预发布模块式查看效果
 npm run start
+```
+
+4. 开发模式
+```bash
+# 进入【前端目录】安装依赖 并 启动前端服务
+cd frontend 
+npm install
+npm run serve
+
+# 启动主进程服务
+cd ..
+npm run dev
 ```
 
 ::: warning 说明
