--- a/docs/03.api/002.API/002.app/001.intro.md
+++ b/docs/03.api/002.API/002.app/001.intro.md
@@ -6,7 +6,15 @@ article: false
 ---
 
 ###  app对象说明
-全局app对象，挂载了许多功能。除了**addon**、**service**、**request**、**response**对象，其他对象请使用模块化api。
+全局app对象，挂载了许多功能。
+
+**注意：** 框架中的 **this.app** 不等于 electron的app ，开发者注意区分。一般情况下，使用别名来区分：
+```javascript
+const { app: electronApp } = require('electron');
+```
+
+
+除了**addon**、**service**、**request**、**response**对象，其他对象请使用模块化api。
 
 ###  推荐
 请升级 ee-core >= v2.1.0 ，使用模块化的api。
