--- a/docs/04.其它/010.案例.md
+++ b/docs/04.其它/010.案例.md
@@ -9,7 +9,7 @@ article: false
 
 如果你想展示项目，请联系我（qq：530353222）
 
-###  时音音乐 - [下载](https://github.com/AALEI/TimeSound_desktop)
+###  时音音乐
 ![QQ图片20221128194242.jpg](/img/electron-egg/showcase/p1.png)
 ![QQ截图20221128194313.png](/img/electron-egg/showcase/p2.png)
 
@@ -21,7 +21,7 @@ article: false
 ![A03E74804CE391D45087A9A447FBF3B2.png](/img/electron-egg/showcase/p5.png)
 ![040D4B974870DBBF332920C04090E7C8.png](/img/electron-egg/showcase/p6.png)
 
-###  Serendipity 英雄联盟对局助手 - [下载](https://lol-tool.com)
+###  Serendipity 英雄联盟对局助手
 ![zhanjichaxun.png](/img/electron-egg/showcase/p7.png)
 ![zhanghaoxinxi.png](/img/electron-egg/showcase/p8.png)
 
@@ -31,7 +31,7 @@ article: false
 ###  小明云存储
 ![xm-pic-config.png](/img/electron-egg/showcase/p10.png)
 
-###  GitLike - [下载](https://ooin.cn/)
+###  GitLike
 ![gitlike.png](/img/electron-egg/showcase/p11.png)
 ![gitlike-guanli.jpg](/img/electron-egg/showcase/p12.png)
 
