--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -353,3 +353,29 @@ const { logger } = require('ee-core/electron');
 const Electron = require('ee-core/electron');
 const Log = require('ee-core/log');
 ```
+
+#### 17：双击exe无反应
+代码被过滤，请仔细阅读：[构建文档](/pages/ad838d/)
+
+#### 18：双击exe报错
+```javascript
+D:\test\electron\electron-egg\out\win-unpacked>
+D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\node_modules\ee-core\log\logger.js:38
+logger: sysConfig.logger,
+  ^
+
+TypeError: Cannot read property 'logger' of undefined
+at Object.create (D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\node_modules\ee-core\log\logger.js:38:27)
+at Object.get coreLogger [as coreLogger] (D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\node_modules\ee-core\log\index.js:30:32)
+at process. (D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\node_modules\ee-core\exception\index.js:26:9)
+at process.emit (events.js:327:22)
+at process._fatalException (internal/process/execution.js:163:25)
+```
+```
+# 情况一
+# 这种是临时文件，无法使用，忽略它。
+临时文件：out/win-unpacked
+
+# 情况二
+代码被过滤了，请仔细阅读：构建文档
+```
