--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -354,10 +354,10 @@ const Electron = require('ee-core/electron');
 const Log = require('ee-core/log');
 ```
 
-#### 17：双击exe无反应
+### 17：双击exe无反应
 代码被过滤，请仔细阅读：[构建文档](/pages/ad838d/)
 
-#### 18：双击exe报错
+### 18：双击exe报错
 ```javascript
 D:\test\electron\electron-egg\out\win-unpacked>
 D:\test\electron\electron-egg\out\win-unpacked\resources\app.asar\node_modules\ee-core\log\logger.js:38
