--- a/docs/03.api/001.教程/001.使用说明.md
+++ b/docs/03.api/001.教程/001.使用说明.md
@@ -7,7 +7,7 @@ permalink: /pages/85c531/
 ###  介绍
 electron-egg框架核心功能由 **ee-core** 驱动。目前包含 **100+** api，极大的增强了框架能力。
 
-<!-- > 注：后续将开放api对第三方框架使用 -->
+同样的，您可以将ee-core作为 **模块** 使用，即使您的项目**没有使用**electron-egg框架。
 
 ###  模块列表
 
