--- a/docs/03.api/002.API/106.this-app/020.config.md
+++ b/docs/03.api/002.API/106.this-app/020.config.md
@@ -6,12 +6,12 @@ article: false
 ---
 
 ###  介绍
-
-> 推荐升级 ee-core >= v2.1.0 使用模块化的api，减少对this.app的依赖。
-
 获取配置文件对象；该对象根据当前环境变量的不同，返回的结果不同。
 
-使用方法：
+###  推荐
+请升级 ee-core >= v2.2.0 ，使用模块化的api。
+
+### 使用方法：
 ```javascript
 this.app.config
 ```
