--- a/docs/03.api/002.API/106.this-app/030.electron.md
+++ b/docs/03.api/002.API/106.this-app/030.electron.md
@@ -7,9 +7,10 @@ article: false
 
 ###  electron全局对象
 
-> 推荐升级 ee-core >= v2.1.0 使用模块化的api，减少对this.app的依赖。
+###  推荐
+请升级 ee-core >= v2.2.0 ，使用模块化的api。
 
-使用方法：
+### 使用方法：
 ```javascript
 # 主窗口对象
 this.app.electron.mainWindow
