--- a/docs/03.api/002.API/106.this-app/040.httpclient.md
+++ b/docs/03.api/002.API/106.this-app/040.httpclient.md
@@ -6,9 +6,10 @@ article: false
 ---
 
 ###  http客户端
-> 推荐升级 ee-core >= v2.1.0 使用模块化的api，减少对this.app的依赖。
-
 发送http请求
+
+###  推荐
+请升级 ee-core >= v2.2.0 ，使用模块化的api。
 
 使用方法：
 ###  curl
