--- a/docs/03.api/002.API/106.this-app/060.logger.md
+++ b/docs/03.api/002.API/106.this-app/060.logger.md
@@ -5,9 +5,10 @@ permalink: /pages/4c19a1/
 article: false
 ---
 
-###  日志记录功能
+###  日志记录
 
-> 推荐升级 ee-core >= v2.1.0 使用模块化的api，减少对this.app的依赖。
+###  推荐
+请升级 ee-core >= v2.2.0 ，使用模块化的api。
 
 使用方法：
 ```javascript
