--- a/docs/01.v3/010.快速入门/031.第三方使用.md
+++ b/docs/01.v3/010.快速入门/031.第三方使用.md
@@ -35,6 +35,9 @@ new ElectronEgg('module');
 
 这样您就可以使用ee-core的提供的 **100+ API** 了。
 
+### 更多API
+[API使用教程](/pages/1dbe35/)
+
 ### 示例
 test.js
 ```javascript
