--- a/docs/03.api/001.教程/001.使用说明.md
+++ b/docs/03.api/001.教程/001.使用说明.md
@@ -7,9 +7,12 @@ permalink: /pages/85c531/
 ###  介绍
 electron-egg框架核心功能由 **ee-core** 驱动。目前包含 **100+** api，极大的增强了框架能力。
 
-同样的，您可以将ee-core作为 **模块** 使用，即使您的项目**没有使用**electron-egg框架。
+同样的，您可以将ee-core作为 **模块** 使用，详情见 [第三方使用](/pages/1dbe35/)
 
 ###  模块列表
+
+#### addon
+插件模块。
 
 #### bin
 命令行模块。
@@ -50,8 +53,8 @@ http客户端。
 #### ps
 进程工具类模块。
 
-#### service
-服务层模块的基础类。
+#### services
+服务层模块。
 
 #### socket
 提供socket通信功能。
