--- a/docs/03.api/001.教程/002.第三方使用.md
+++ b/docs/03.api/001.教程/002.第三方使用.md
@@ -6,7 +6,9 @@ permalink: /pages/1dbe35/
 ---
 
 ###  作为模块使用
-如果您不想使用electorn-egg框架，但想使用它的API，只需安装ee-core，便可使用。
+如果您不想使用electorn-egg框架，但想使用它的API，只需**安装 ee-core 包**，便可使用。
+
+或者将electron-egg内嵌入您自己的项目，只需要把./electron文件夹复制到您项目的根目录即可。
 
 ###  安装 ee-core
 > ee-core: v2.2.0
