--- a/docs/03.api/002.API/005.addon/010.介绍.md
+++ b/docs/03.api/002.API/005.addon/010.介绍.md
@@ -20,6 +20,43 @@ const win = Addon.get('window').create('window-name', {title: 'demo'});
 Addon.get('tray').create();
 ```
 
+### 第三方使用
+1. 创建配置文件
+
+在项目根目录创建 **./electron/config/config.default.js** 文件
+```javascript
+/**
+ * 默认配置
+ */
+module.exports = (appInfo) => {
+  const config = {};
+
+  /**
+   * 插件功能
+   */
+  config.addons = {
+    window: {
+      enable: true,
+    },
+    tray: {
+      enable: true,
+      title: 'EE程序',
+      icon: '/public/images/tray_logo.png'
+    },
+  };
+
+  return {
+    ...config
+  };
+}
+```
+2. 编写业务代码文件
+在项目根目录创建 ./electron/addon/tray/index.js 文件，[tray示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/addon/tray/index.js)
+
+内置window插件可直接使用
+
+3. 使用方法同上
+
 ### API列表
 ### get()
 获取实例化后的插件对象。
