--- a/docs/03.api/002.API/015.config.md
+++ b/docs/03.api/002.API/015.config.md
@@ -9,19 +9,28 @@ article: false
 
 ### 介绍
 系统config配置模块，可以 获取/设置 system.json库中的数据。
+
 ### 使用方法
 ```javascript
 const Conf = require('ee-core/config');
 ```
+
+### 第三方使用
+1. 创建配置文件
+在项目根目录创建 ./electron/config/config.default.js 文件，[config示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/config/config.default.js)
+2. 使用方法同上
+
 ### API列表
 ### all()
 获取所有配置数据。
+
 ### setAll(config)
 
 - config [Object] - 包含全部配置数据的对象
 
 保存所有配置。比如，修改过config对象中的某个属性后，重新setAll(config)，把数据保存在json数据库中。
 注：尽量不要修改系统配置中的数据，以免引发异常。
+
 ### getValue(key)
 
 - key [String] - 系统配置中对象属性
