--- a/docs/03.api/002.API/030.controller.md
+++ b/docs/03.api/002.API/030.controller.md
@@ -8,7 +8,8 @@ article: false
 > ee-core：v2.0.3
 
 ### 介绍
-控制器模块的基础类
+控制器模块
+
 ### 使用方法
 ```javascript
 const { Controller } = require('ee-core');
@@ -17,6 +18,23 @@ class ExampleController extends Controller {
 	......
 }
 ```
+
+### 第三方使用
+1. 创建controller文件
+
+在项目根目录创建 **./electron/controller/example.js** 文件，[controller示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/controller/example.js)
+
+2. 前端调用
+```javascript
+const { ipcRenderer: ipc } = (window.require && window.require('electron')) || window.electron || {};
+
+ipc.invoke('controller.example.hello', {}).then(res => {
+	//
+})
+
+ipc.send('controller.example.hello', {});
+```
+
 ### API列表
 ### BaseContextClass
 提供一个基础类，目前有app、config、service 三个属性
