--- a/docs/03.api/002.API/060.jobs.md
+++ b/docs/03.api/002.API/060.jobs.md
@@ -15,6 +15,13 @@ article: false
 const Jobs = require('ee-core/jobs');
 ```
 
+### 第三方使用
+1. 创建job文件
+
+在项目根目录创建 **./electron/jobs/example/timer.js** 文件，[job示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/jobs/example/timer.js)
+
+2. 使用同上
+
 ###  API列表
 ####  ChildJob
 获取一个子进程任务类。该功能基于node.js的child_process模块实现。
