--- a/docs/03.api/002.API/010.bin.md
+++ b/docs/03.api/002.API/010.bin.md
@@ -18,11 +18,20 @@ article: false
 rd命令会把 frontend/dist 复制到 /public/dist ; 服务最终加载的是 /public/dist前端资源。
 
 frontend目录代码不会被打包，防止源码泄露。
+```bash
+ee-core rd --dist_dir=./frontend/dist
+```
 
 ### encrypt
 将 electron/ 复制到 /public/electron ; 然后对其加密。
 
 electron目录代码不会被打包，防止源码泄露。
+```bash
+ee-core encrypt
+```
 
 ### clean
 清理加密代码（/public/electron目录）
+```bash
+ee-core clean
+```
