--- a/docs/03.api/002.API/005.addon/010.介绍.md
+++ b/docs/03.api/002.API/005.addon/010.介绍.md
@@ -51,9 +51,10 @@ module.exports = (appInfo) => {
 }
 ```
 2. 编写业务代码文件
-在项目根目录创建 ./electron/addon/tray/index.js 文件，[tray示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/addon/tray/index.js)
 
-内置window插件可直接使用
+- 在项目根目录创建 **./electron/addon/tray/index.js** 文件，[tray示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/addon/tray/index.js)
+
+- 内置window插件可直接使用
 
 3. 使用方法同上
 
