--- a/docs/03.api/002.API/095.socket.md
+++ b/docs/03.api/002.API/095.socket.md
@@ -23,6 +23,10 @@ const Socket = require('ee-core/socket');
 获取socketServer实例对象。
 ```javascript
 const { getSocketServer } = require('ee-core/socket');
+
+// 发消息到前端io-client on()监听的事件 或者 其它语言socket监听的事件
+const EeSocketServer = getSocketServer();
+EeSocketServer.io.emit("c# client 监听的event name", "数据");
 ```
 
 ###  getHttpServer()
