--- a/docs/01.v3/010.快速入门/031.第三方使用.md
+++ b/docs/01.v3/010.快速入门/031.第三方使用.md
@@ -6,7 +6,7 @@ permalink: /pages/089f32/
 ---
 
 ###  作为模块使用
-如果您不想使用electorn-egg框架，但想使用它的API，只需安装ee-core，便可使用。
+如果您不想使用electorn-egg框架，但想使用它的API，只安装 **ee-core** 库即可。
 
 ###  安装 ee-core
 > ee-core: v2.2.0
@@ -30,6 +30,8 @@ pnpm install ee-core
 在您的项目入口文件，如 main.js中，添加如下代码：
 ```javascript
 const { ElectronEgg } = require('ee-core');
+
+// 以 'module' 模块方式使用 
 new ElectronEgg('module');
 ```
 
