--- a/docs/01.v3/040.升级/010.框架升级.md
+++ b/docs/01.v3/040.升级/010.框架升级.md
@@ -21,7 +21,7 @@ npm install ee-core@2.0.3
 npm install electron@16.13.0 --save-dev
 ```
 ### Electron 与 Node.js 对应关系
-请查阅文档：[electron与node.js 版本对应关系](/pages/4fce33/)
+请查阅文档：[electron与node.js 版本对应关系](/pages/5638a8/)
 
 ### Window 7 系统
 微软已经停止对 win7系统支持。需要支持win7的，请使用以下开发环境：
