--- a/docs/03.api/002.API/015.config.md
+++ b/docs/03.api/002.API/015.config.md
@@ -20,6 +20,9 @@ const Conf = require('ee-core/config');
 在项目根目录创建 ./electron/config/config.default.js 文件，[config示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/config/config.default.js)
 2. 使用方法同上
 
+###  config位置
+见文档：[system.json](/pages/ad7faa/)
+
 ### API列表
 ### all()
 获取所有配置数据。
