--- a/docs/03.api/002.API/075.log.md
+++ b/docs/03.api/002.API/075.log.md
@@ -9,6 +9,7 @@ article: false
 
 ###  介绍
 日志模块
+
 ###  使用方法
 ```javascript
 const Log = require('ee-core/log');
@@ -22,6 +23,10 @@ const Log = require('ee-core/log');
 %O：obj对象
 %c：CSS样式
 ```
+
+###  日志位置
+见文档：[日志](/pages/0d08b1/)
+
 ###  API列表
 ###  create(config)
 
