--- a/docs/03.api/002.API/090.services.md
+++ b/docs/03.api/002.API/090.services.md
@@ -5,8 +5,9 @@ permalink: /pages/deaaeb/
 article: false
 ---
 
-###  介绍
 > ee-core：v2.2.0
+
+###  介绍
 服务层模块
 
 ### 使用方法
@@ -20,13 +21,13 @@ Services.get('storage');
 ### 第三方使用
 1. 创建services业务文件
 
-在项目根目录创建 ./electron/service/example.js 文件，[service示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/service/framework.js)
+在项目根目录创建 **./electron/service/example.js** 文件，[service示例代码](https://github.com/dromara/electron-egg/blob/demo/electron/service/framework.js)
 
 2. 使用方法同上
 
 ### API列表
 ### get()
-获取实例化后的service对象。
+获取实例化后的service对象与方法调用。
 ```javascript
 Services.get('framework').doCreatePool();
 ```
