--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -122,8 +122,18 @@ at Object.loadFile(C:Program Fileslee\resources\app.asarlnode moduleslee-corelco
 at AppLoader.requireFile(C:Program Filesleelresourceslapp.asarlnode moduleslee-corelcoreliblloaderlee loaderj.:23)
 at AppLoaderloadFile(C:\Program
 ```
+
+> 报错4：windows防火墙，授权electron应用访问网络
+
+```javascript
+A JavaScript error occurred in the main process
+Uncaught Exception:
+Error: net::ERR CONNECTION REFUSED at SimpleURLLoaderWrapper.<anonymous> (electron/js2c/browser init.js:105:7068)
+```
+
 ###  4：cmd控制台乱码
 参照：[中文乱码](https://cloud.tencent.com/developer/article/1835811)
+
 ###  5：npm包缺失或异常
 安装异常时，删掉node_modules和package-lock文件
 ```bash
