--- a/docs/03.api/002.API/005.addon/010.介绍.md
+++ b/docs/03.api/002.API/005.addon/010.介绍.md
@@ -1,12 +1,14 @@
 ---
-title: 介绍
+title: 插件模块
 date: 2023-05-25 11:12:19
 article: false
 permalink: /pages/12884f/
 ---
 
-###  介绍
 > ee-core: v2.2.0
+
+###  介绍
+
 插件模块，可以调用框架内置或者开发中自己编写的插件。
 
 ### 使用方法
