--- a/docs/03.api/002.API/005.addon/030.window.md
+++ b/docs/03.api/002.API/005.addon/030.window.md
@@ -1,12 +1,14 @@
 ---
-title: 插件模块
+title: window
 date: 2023-05-25 11:12:19
 article: false
 permalink: /pages/3b0795/
 ---
 
-###  介绍
 > ee-core: v2.2.0
+
+###  介绍
+
 内置window插件
 
 ### 使用方法
@@ -21,7 +23,7 @@ const win = Addon.get('window');
 - @params opt [Object] - 窗口选项，见：[browserWindowOptions](https://www.electronjs.org/zh/docs/latest/api/browser-window#new-browserwindowoptions)
 - @return 窗口对象
 
-创建窗口
+创建窗口。
 
 ###  getWCid()
 - @params name [String] -窗口名字
