--- a/docs/01.v3/020.基础功能/012.入口及生命周期.md
+++ b/docs/01.v3/020.基础功能/012.入口及生命周期.md
@@ -5,9 +5,23 @@ permalink: /pages/e6cd33/
 article: false
 ---
 
-###  main.js 
-说明：项目入口文件及生命周期
+###  介绍 
+项目入口文件及生命周期
 
+::: tip
+v3.3.0 将 main.js中业务代码，放到了 **./electron/index.js** 里面（稍作修改）。
+
+这样所有的业务代码都在 **./electron** 文件夹下，方便业务统一与全局代码加密。
+:::
+
+#### main.js 
+```javascript
+const { ElectronEgg } = require('ee-core');
+new ElectronEgg();
+```
+
+### 旧版本
+#### main.js
 ```javascript
 # 引入框架 Application
 const { Application } = require('ee-core');
