--- a/docs/03.api/002.API/090.services.md
+++ b/docs/03.api/002.API/090.services.md
@@ -30,6 +30,10 @@ Services.get('storage');
 获取实例化后的service对象与方法调用。
 ```javascript
 Services.get('framework').doCreatePool();
+
+// 多层文件夹调用
+// 如 ./electron/serivce/clan/info.js
+Services.get('clan.info').test();
 ```
 
 
