--- a/docs/01.v3/020.基础功能/016.控制器.md
+++ b/docs/01.v3/020.基础功能/016.控制器.md
@@ -58,14 +58,18 @@ class ExampleController extends Controller {
 前端传的参数
 
 #### event
-ipc通信时才有值
+ipc通信时才有值，且值为动态对象；
+- 前端使用 invoke() 方法时，event 等于 IpcMainInvokeEvent 
+- 前端使用 send()/sendSync() 方法时，event 等于 IpcMainEvent 
 
-##### IpcMainInvokeEvent
+说明如下：
+
+##### event - IpcMainInvokeEvent
 前端使用 invoke() 方法时，event == IpcMainInvokeEvent 
 
 请查看：[详细说明](https://www.electronjs.org/zh/docs/latest/api/structures/ipc-main-event)
 
-##### IpcMainEvent
+##### event - IpcMainEvent
 前端使用 send()/sendSync() 方法时，event == IpcMainEvent 
 
 请查看：[详细说明](https://www.electronjs.org/zh/docs/latest/api/structures/ipc-main-invoke-event)
