--- a/docs/01.v3/030.生成软件/010.构建.md
+++ b/docs/01.v3/030.生成软件/010.构建.md
@@ -57,6 +57,7 @@ npm run clean
 # 打包时，package.json中build.productName包名不要为中文，避免一些未知异常
 
 # 准备，设置国内镜像
+# 如果第一次构建长时间卡住，尝试删除 C:\Users\本机用户名\AppData\Local\electron\Cache 把这个目录清空，并重试
 npm config set electron_builder_binaries_mirror=https://registry.npmmirror.com/-/binary/electron-builder-binaries/
 
 # 打包 （windows版）
