常见问题及socket修改

--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -167,6 +167,7 @@ Error: net::ERR CONNECTION REFUSED at SimpleURLLoaderWrapper.<anonymous> (electr
 2：设置config.default.json中的windowsOption.webPreferences.webSecurity=true
 ```
 [知识点：为什么不能使用代理？](https://blog.csdn.net/qq_52126119/article/details/127895336)
+
 ###  7：安装 better-sqlite3 失败
 不同node.js版本，对应的better-sqlite3版本也不尽相同。请尝试 npm i better-sqlite3@7.6.0
 ```bash
@@ -253,10 +254,7 @@ https://github.com/WiseLibs/better-sqlite3/blob/2194095aa1183e9c21d28eafadeac0d4
 原因：vue项目中有个demo功能需要访问electron模块，在普通浏览器中是不能解析的。
 处理：尽量在electron启动的窗口中调试前端页面吧。
 ```
-###  9：开发模式时，前端代码在electron-egg渲染界面无法自动更新
-```
-点击electron-egg菜单->View->Reload，重新加载。
-```
+
 ###  10：node module版本不匹配
 ```bash
 # 错误
@@ -268,7 +266,7 @@ NODE_MODULE_VERSION 89. Please try re-compiling or re-installing
 
 
 # 原因
-一些npm包是用c\c++等其它语音写的，下载的可执行程序可能与你的操作系统不一致，因此需要根据源代码重新构建。
+一些npm包是用c\c++等其它语言写的，下载的可执行程序可能与你的操作系统不一致，因此需要根据源代码重新构建。
 
 # 解决方案
 electron-rebuild -f -w 模块名
@@ -292,13 +290,7 @@ if (isWin7 || isLinux) {
   app.disableHardwareAcceleration();
 }
 ```
-###  13：win7操作系统
-由于win7不在更新，要想支持的话，请使用下面版本
-```javascript
-electron: 11.5.0 (建议 <= 12.x.x)
-node: v12.18.3 (建议 <= 12.x.x)
-electron-builder: 22.10.5 (建议 <= 22.10.x)
-```
+
 ###  14：代码不生效
 如果执行过加密，则会生成加密代码：/public/electron ，框架优先读取它，源代码则不生效。
 如果发现编写的代码不生效，请记得删除加密代码文件。
@@ -354,8 +346,9 @@ error: Cannot create BrowserWindow before app is ready
 
 解决方案：
 ```javascript
+# 不要直接导出模块中某个对象，因为项目启动时，框架源码可能并没有加载完。
+
 # 错误写法
-# 不要直接导出某个对象，如：
 const { mainWindow } = require('ee-core/electron');
 const { logger } = require('ee-core/electron');
 
