--- a/docs/03.api/002.API/095.socket.md
+++ b/docs/03.api/002.API/095.socket.md
@@ -22,7 +22,7 @@ const Socket = require('ee-core/socket');
 ###  getSocketServer()
 获取socketServer实例对象。
 ```javascript
-const { getSocketServer } = require('ee-core/socket');
+const { getSocketServer } = Socket;
 
 // 发消息到前端io-client on()监听的事件 或者 其它语言socket监听的事件
 const EeSocketServer = getSocketServer();
@@ -32,31 +32,31 @@ EeSocketServer.io.emit("c# client 监听的event name", "数据");
 ###  getHttpServer()
 获取httpServer实例对象。
 ```javascript
-const { getHttpServer } = require('ee-core/socket');
+const { getHttpServer } = Socket;
 ```
 
 ###  getIpcServer()
 获取ipcServer实例对象。
 ```javascript
-const { getIpcServer } = require('ee-core/socket');
+const { getIpcServer } = Socket;
 ```
 
 ###  Koa
 原始koa对象，等于require('koa')。提供基础库 - 避免用户重复安装
 ```javascript
-const { Koa } = require('ee-core/socket');
+const { Koa } = Socket;
 ```
 
 ###  IoServer
 原始socket.io对象，等于require('socket.io')。提供基础库 - 避免用户重复安装
 ```javascript
-const { IoServer } = require('ee-core/socket');
+const { IoServer } = Socket;
 ```
 
 ###  IoClient
 原始socket.io-client对象，等于require('socket.io-client')。提供基础库 - 避免用户重复安装
 ```javascript
-const { IoClient } = require('ee-core/socket');
+const { IoClient } = Socket;
 ```
 
 ### socket.io
