--- a/docs/01.v3/010.快速入门/050.配置.md
+++ b/docs/01.v3/010.快速入门/050.配置.md
@@ -86,16 +86,23 @@ config.windowsOption = {
 ###  业务日志
 ```javascript
 config.logger = {
-  appLogName: `ee-${dayjs().format('YYYY-MM-DD')}.log`, 
-  errorLogName: `ee-error-${dayjs().format('YYYY-MM-DD')}.log`,
-  coreLogName: `ee-core-${dayjs().format('YYYY-MM-DD')}.log`,
+  encoding: 'utf8',
+  level: 'INFO',
+  outputJSON: false,
+  buffer: true,
+  enablePerformanceTimer: false,
+  rotator: 'day', // day:按天切割 | none:无
+  appLogName: 'ee.log',
+  coreLogName: 'ee-core.log',
+  errorLogName: 'ee-error.log' 
 }
 ```
+
 ###  远程web地址 (可选) 
 ```javascript
 config.remoteUrl = {
   enable: false, // 是否启用
-  url: 'https://discuz.chat/' // Any web url
+  url: 'http://electron-egg.kaka996.com/' // Any web url
 };
 ```
 ###  内置socket服务
