支持与赞助

--- a/docs/04.其它/011.交流.md
+++ b/docs/04.其它/011.交流.md
@@ -15,13 +15,11 @@ article: false
 ### 交流群
 经常有用户私聊我，让再建个群，便于初学者交流（非开发者勿进）
 
-微信进群（或我的微信，备注：electron-egg）
+添加我微信进群（备注：electron-egg）
 
-微信群1：
-<img style="zoom:20%;" :src="$withBase('/img/electron-egg/wxq-1.jpg')" >
 <img style="zoom:20%;" src="https://img01.kaka996.com/ee/wx-1.jpg" >
 
-qq群将满，优先加微信群
+qq群已满，请加微信群
 - qq群2：495444940 (已满)
 - qq群1：735532437 (已满)
 
