--- a/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
+++ b/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
@@ -31,9 +31,15 @@ npm run re-sqlite
 
 # 如果sqlite报错 ...tools之类的
 npm --vs2015 i -g --production windows-build-tools
-或
-npm i -g --production windows-build-tools 
+# 或
+npm i -g --production windows-build-tools
+
+# 或 尝试清理
+node-gyp clean
 ```
+
+### better-sqlite3安装问题
+请查看：[better-sqlite3 文档](https://github.com/WiseLibs/better-sqlite3/blob/master/docs/troubleshooting.md)
 
 注：ee < 2.1.6的版本需要在package.json的 scripts 对象加入
 ```javascript
