--- a/docs/01.v3/050.其它/030.更新记录.md
+++ b/docs/01.v3/050.其它/030.更新记录.md
@@ -6,6 +6,15 @@ article: false
 ---
 
 # 更新记录
+### 3.4.0
+1. 【增加】主进程mainserver支持加载静态资源，支持入口文件配置。
+2. 【增加】config模块，增加isWebProtocol()/isFileProtocol()。
+3. 【升级】升级electron到v21.4.4
+4. 【升级】升级@electron/rebuild到v3.2.13
+5. 【升级】demo分支，升级better-sqlite3到v8.4.0
+6. 【修复】修复service多层调用。
+7. 【优化】将打包配置独立出builder.json文件，精简package.json内容。
+
 ### 3.3.0
 1. 【增加】新增main模块，支持第三方框架或项目引入ee-core，使用其 100+ API。
 2. 【增加】新增addon模块，可以在controller、preload、用户自定义模块等，使用addon实例。
