--- a/docs/01.v3/030.生成软件/020.代码加密.md
+++ b/docs/01.v3/030.生成软件/020.代码加密.md
@@ -19,12 +19,15 @@ npm run clean
 ```
 ### 打包时，过滤源代码
 注：未使用加密，请删除 **"!electron/"** 。
-打开package.json文件，修改 **build.files** 数组属性，添加 **"!electron/"，如下：**
+
+打开package.json 或 builder.json文件，修改 **build.files** 数组属性，添加 **"!electron/"，如下：**
 ```javascript
+// electron-egg: v3.4.0版本，将构建配置，独立为./electron/config/builder.json 文件
+
 "build": {
   ......
   "asar": true,
-    "files": [
+  "files": [
     "**/*",
     "!frontend/", // 过滤前端源码
     "!run/",
@@ -50,7 +53,8 @@ module.exports = {
   files: [
     'electron/**/*.(js|json)',
     '!electron/config/encrypt.js',
-    '!electron/config/nodemon.json'
+    '!electron/config/nodemon.json',
+    '!electron/config/builder.json',
   ],
   fileExt: ['.js'], // 需要加密的文件后缀，暂时只支持js，后续待扩展
   confusionOptions: {}
