--- a/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
+++ b/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
@@ -24,7 +24,7 @@ sqlite数据库（可选）
 npm i node-gyp -g
 
 # 安装 构建工具
-npm i @electron/rebuild  -D
+npm install --save-dev @electron/rebuild
 
 # （必须）重新构建适合当前操作系统的sqlite
 npm run re-sqlite
@@ -49,6 +49,11 @@ npm i -g --production windows-build-tools
 ```
 
 安装失败？查看：[常见问题](/pages/23649b/)
+
+### 框架历史使用的版本
+1. node.js: v16.20.0 | electron: v21.4.4 | (better-sqlite3: v8.4.0)
+2. node.js: v14.21.1 | electron: v13.6.9 | (better-sqlite3: v7.6.0)
+3. node.js: v12.22.0 | electron: v12.2.3 | (better-sqlite3: v7.6.0)
 
 ###  数据文件位置
 打包前：项目根目录
