--- a/docs/01.v3/020.基础功能/010.目录结构.md
+++ b/docs/01.v3/020.基础功能/010.目录结构.md
@@ -20,6 +20,7 @@ project
         ├── config.local.js dev环境加载
         ├── config.prod.js 生产环境加载
         ├── encrypt.js 加密配置文件
+        ├── builder.json 打包配置
     ├── controller 控制器
     ├── service 业务层
     ├── preload 预加载，在程序启动时加载，如托盘、自动升级等功能要提前加载代码
