--- a/docs/01.v3/030.生成软件/010.构建.md
+++ b/docs/01.v3/030.生成软件/010.构建.md
@@ -49,13 +49,19 @@ npm run clean
 
 详细说明：[代码加密](/pages/383ba6/)
 
-###  第三步：执行打包命令
-注1：请尽量让项目名唯一（electron-egg/package.json中name属性），防止和别人软件名称冲突
+###  第三步：打包
+#### 配置
+> electron-egg: v3.4.0
+查看 [builder.json](/pages/2df2e6/)
 
-注2：打包失败，请查看[常见问题](/pages/23649b/)。
+::: warning 注意
+1：请尽量让项目名唯一（electron-egg/package.json中name属性），防止和别人软件名称冲突
+
+2：打包失败，请查看[常见问题](/pages/23649b/)。
+:::
+
+#### 命令
 ```bash
-# 打包时，package.json中build.productName包名不要为中文，避免一些未知异常
-
 # 准备，设置国内镜像
 # 如果第一次构建长时间卡住，尝试删除 C:\Users\本机用户名\AppData\Local\electron\Cache 把这个目录清空，并重试
 npm config set electron_builder_binaries_mirror=https://registry.npmmirror.com/-/binary/electron-builder-binaries/
