--- a/docs/01.v3/030.生成软件/020.代码加密.md
+++ b/docs/01.v3/030.生成软件/020.代码加密.md
@@ -7,7 +7,7 @@ article: false
 
 **要求：ee-core: v1.2.10** 及以上
 
-目前框架支持两种代码加密，分别为 **字节码加密** 和 **压缩混淆加密。**
+目前框架支持两种代码加密，分别为 **字节码加密** 和 **压缩混淆加密**
 
 ### 命令
 ```bash
@@ -18,7 +18,9 @@ npm run encrypt
 npm run clean
 ```
 ### 打包时，过滤源代码
-注：未使用加密，请删除 **"!electron/"** 。
+::: warning 注意
+未使用加密，请删除 **"!electron/"** 。
+:::
 
 打开package.json 或 builder.json文件，修改 **build.files** 数组属性，添加 **"!electron/"，如下：**
 ```javascript
@@ -56,7 +58,7 @@ module.exports = {
     '!electron/config/nodemon.json',
     '!electron/config/builder.json',
   ],
-  fileExt: ['.js'], // 需要加密的文件后缀，暂时只支持js，后续待扩展
+  fileExt: ['.js'],
   confusionOptions: {}
 };
 ```
@@ -90,7 +92,11 @@ files: [
 ### 加密后文件位置
 加密后，文件在 ./public/electron 里面，请注意业务代码中，文件引入路径。
 
-> 注：dev环境（或 未使用加密功能的prod环境）使用 ./electron 代码，prod环境使用 ./public/electron代码。
+::: warning 注意
+dev环境（或 未使用加密功能的prod环境）使用 ./electron 代码；
+
+prod环境使用 ./public/electron 代码。
+::: 
 
 ### 方式一：字节码加密 - bytecode
 什么是字节码加密？
@@ -140,17 +146,19 @@ confusionOptions: {
 - 可在windows-64-bit 操作系统上，同时构建 32位 和 64位应用。
 - 其它如上。
 
-#### 注意
+::: warning 注意
 如果加密生成的代码无法运行，请多次 执行 **npm run encrypt**
 
 原因：加密后代码混淆很大，可能触发某些关键字或者字符编码，导致代码无法正常读取。
+:::
 
 ### 方式三：压缩混淆加密 strict
-> 需要：ee-core: v1.4.0
+> ee-core: v1.4.0
 
 先 压缩混淆加密，然后 字节码加密，代码更加安全。
-#### 注意
-问题同上
 
+::: warning 注意
+问题同上
+:::
 
 
