--- a/docs/01.v3/020.基础功能/040.通信/020.通信ipcRender.md
+++ b/docs/01.v3/020.基础功能/040.通信/020.通信ipcRender.md
@@ -14,7 +14,7 @@ article: false
 ```
 内容
 ```javascript
-const { ipcRenderer: ipc } = (window.require && window.require('electron')) || window.electron || null;
+const { ipcRenderer: ipc } = (window.require && window.require('electron')) || window.electron || {};
 
 /**
  * ipc
