--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -124,6 +124,7 @@ at AppLoaderloadFile(C:\Program
 ```
 
 > 报错4：windows防火墙，授权electron应用访问网络
+> 可能需要重启电脑
 
 ```javascript
 A JavaScript error occurred in the main process
