运行rd，encrypt ，clean命令时报错

--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -383,3 +383,16 @@ at process._fatalException (internal/process/execution.js:163:25)
 # 情况二
 代码被过滤了，请仔细阅读：构建文档
 ```
+
+### 19：运行rd，encrypt ，clean命令时报错
+```javascript
+env: node\r: No such file or directory
+error Command failed with exit code 127.
+```
+原因：windows系统的换行回车是CRLF，类unix系统下是LF
+
+解决方案：
+```javascript
+// 用vs code打开把行尾序列由CRLF改成LF就可以了
+node_modules/ee-core/bin/tools.js
+```
