--- a/docs/03.api/002.API/095.socket.md
+++ b/docs/03.api/002.API/095.socket.md
@@ -22,8 +22,11 @@ const Socket = require('ee-core/socket');
 ###  getSocketServer()
 获取socketServer实例对象。
 ```javascript
-// 不要在模块顶部导出对象，在你使用的方法内导出 
-// 因为项目启动时，框架源码可能并没有加载完
+// 顶部引入模块
+const Socket = require('ee-core/socket');
+
+// 在你使用的方法内导出 getSocketServer
+// 不到在顶部导出 getSocketServer，因为项目启动时，框架源码可能并没有加载完
 const { getSocketServer } = Socket;
 
 // 发消息到前端io-client on()监听的事件 或者 其它语言socket监听的事件
@@ -34,14 +37,20 @@ EeSocketServer.io.emit("c# client 监听的event name", "数据");
 ###  getHttpServer()
 获取httpServer实例对象。
 ```javascript
-// 不要在模块顶部导出对象，在你使用的方法内导出
+// 顶部引入模块
+const Socket = require('ee-core/socket');
+
+// 在你使用的方法内导出 getHttpServer
 const { getHttpServer } = Socket;
 ```
 
 ###  getIpcServer()
 获取ipcServer实例对象。
 ```javascript
-// 不要在模块顶部导出对象，在你使用的方法内导出
+// 顶部引入模块
+const Socket = require('ee-core/socket');
+
+// 在你使用的方法内导出 getIpcServer
 const { getIpcServer } = Socket;
 ```
 
