--- a/docs/03.api/002.API/095.socket.md
+++ b/docs/03.api/002.API/095.socket.md
@@ -26,7 +26,7 @@ const Socket = require('ee-core/socket');
 const Socket = require('ee-core/socket');
 
 // 在你使用的方法内导出 getSocketServer
-// 不到在顶部导出 getSocketServer，因为项目启动时，框架源码可能并没有加载完
+// 不要在顶部导出 getSocketServer，因为项目启动时，框架源码可能并没有加载完
 const { getSocketServer } = Socket;
 
 // 发消息到前端io-client on()监听的事件 或者 其它语言socket监听的事件
