--- a/docs/01.v3/020.基础功能/014.前端模块.md
+++ b/docs/01.v3/020.基础功能/014.前端模块.md
@@ -13,7 +13,7 @@ article: false
 
 - 可以使用任意前端技术
 - 项目中前端模块只是demo，你可以随意修改或删除
-- vue2、vue3、react、Angular、html等等
+- vue2、vue3、react、Angular、html、vite 等等
 
 ###  简单配置
 ```javascript
