--- a/docs/03.api/002.API/095.socket.md
+++ b/docs/03.api/002.API/095.socket.md
@@ -23,15 +23,53 @@ const Socket = require('ee-core/socket');
 获取socketServer实例对象。
 ```javascript
 // 顶部引入模块
+// 不要在顶部直接导出 getSocketServer，因为项目启动时，框架源码可能并没有加载完
 const Socket = require('ee-core/socket');
 
-// 在你使用的方法内导出 getSocketServer
-// 不要在顶部导出 getSocketServer，因为项目启动时，框架源码可能并没有加载完
-const { getSocketServer } = Socket;
-
 // 发消息到前端io-client on()监听的事件 或者 其它语言socket监听的事件
-const EeSocketServer = getSocketServer();
-EeSocketServer.io.emit("c# client 监听的event name", "数据");
+const SocketServer = Socket.getSocketServer();
+SocketServer.io.emit("client 监听的event name", "数据");
+```
+
+#### SocketServer.io
+实例化后的server对象，包含以下属性、方法：
+
+- 属性
+```javascript
+// 文档：https://socket.io/docs/v4/server-api/#attributes
+io.engine
+io.sockets
+```
+
+- 方法
+```javascript
+// 文档：https://socket.io/docs/v4/server-api/#methods
+io.adapter([value])
+io.attach(httpServer[, options])
+io.attach(port[, options])
+io.attachApp(app[, options])
+io.bind(engine)
+io.close([callback])
+io.disconnectSockets([close])
+io.emit(eventName[, ...args])
+io.emitWithAck(eventName[, ...args])
+io.except(rooms)
+io.fetchSockets()
+io.in(room)
+io.listen(httpServer[, options])
+io.listen(port[, options])
+io.of(nsp)
+io.on(eventName, listener)
+io.onconnection(socket)
+io.path([value])
+io.serveClient([value])
+io.serverSideEmit(eventName[, ...args][, ack])
+io.serverSideEmitWithAck(eventName[, ...args])
+io.socketsJoin(rooms)
+io.socketsLeave(rooms)
+io.timeout(value)
+io.to(room)
+io.use(fn)
 ```
 
 ###  getHttpServer()
@@ -40,8 +78,8 @@ EeSocketServer.io.emit("c# client 监听的event name", "数据");
 // 顶部引入模块
 const Socket = require('ee-core/socket');
 
-// 在你使用的方法内导出 getHttpServer
-const { getHttpServer } = Socket;
+// 在方法内调用
+Socket.getHttpServer();
 ```
 
 ###  getIpcServer()
@@ -50,8 +88,8 @@ const { getHttpServer } = Socket;
 // 顶部引入模块
 const Socket = require('ee-core/socket');
 
-// 在你使用的方法内导出 getIpcServer
-const { getIpcServer } = Socket;
+// 在方法内调用
+Socket.getIpcServer();
 ```
 
 ###  Koa
