--- a/docs/01.v3/010.快速入门/020.electron-egg是什么.md
+++ b/docs/01.v3/010.快速入门/020.electron-egg是什么.md
@@ -7,7 +7,7 @@ article: false
 
 ###  一句话介绍
 
-electron-egg是一个**业务框架**。
+electron-egg是一个 `业务框架`。
 
 就好比 Spring 之于 JAVA，Thinkphp 之于 PHP，Nuxt.js 之于 VUE ......
 
