--- a/docs/01.v3/010.快速入门/060.命令.md
+++ b/docs/01.v3/010.快速入门/060.命令.md
@@ -30,6 +30,9 @@ npm run encrypt
 # 清除加密的代码
 npm run clean
 
+# 生成logo
+npm run icon
+
 # 打包 （windows版）
 npm run build-w (调整为64位)
 npm run build-w-32 (32位)
