--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -89,7 +89,7 @@ npm run dev
    */     
   config.mainServer = {
     // protocol协议：http:// | https:// | file://
-    protocol: 'http://',
+    protocol: 'file://',
     // 前端资源入口文件
     indexPath: '/public/dist/index.html',
     host: '127.0.0.1',
@@ -111,13 +111,12 @@ npm run dev
 - `ssl` object - 使用https协议时的证书文件。
 - `options` object - 一些额外的参数。
 
-#### web模式
-web模式（http/https）将会创建server服务来加载前端资源，兼容性好。
-
-可以使用`vue`、`react`、`cocos`、`Angular` 等各种前端技术，而无需做特殊修改。
-
 #### file协议模式
 > ee-core: 2.2.4
+
+::: tip 注意
+electron-egg: v3.5.0 之后，默认使用 file 协议模式
+:::
 
 `file://` 模式不会创建server服务，性能稍好，但要配置 **项目部署的基础路径**。
 
@@ -158,9 +157,12 @@ module.exports = {
 
 - 其它前端技术类似。
 
-把 `项目部署的基础路径` 改为相对路径，或 能被访问到的路径（可用 [开发者工具栏](/pages/64001c/) 调试，查看完整路径）
+把 `项目部署的基础路径` 改为相对路径，或 能被访问到的路径（可用 [开发者工具栏](/pages/64001c/) 查看资源路径是否正确）
 
+#### web模式
+web模式（http/https）将会创建server服务来加载前端资源，兼容性好。
 
+可以使用`vue`、`react`、`cocos`、`Angular` 等各种前端技术，而无需做特殊修改。
 
 
 
