--- a/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
@@ -156,12 +156,10 @@ config.httpServer = {
 ```javascript
 config.mainServer = {
   // 协议：http:// | https:// | file://
-  // web模式（http / https）将会创建server服务来加载前端资源，兼容性好。
-  // file模式不会创建server服务，性能稍好，但前端资源和路由等问题需要开发者解决。
-  protocol: 'http://',
+  protocol: 'file://',
   // 前端资源入口文件
   indexPath: '/public/dist/index.html',
-  host: '127.0.0.1',
+  host: 'localhost',
   port: 7072, // 默认端口（如果端口被使用，则随机获取一个）
 	ssl: {
     key: '/public/ssl/localhost+1.key', // key文件
