--- a/docs/01.v3/010.快速入门/050.配置/05.打包配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/05.打包配置.md
@@ -8,7 +8,7 @@ permalink: /pages/2df2e6/
 ### builder.json
 打包功能使用[electron-builder](https://www.electron.build/)包，更多配置参考[官方文档](https://www.electron.build/)。
 
-::: warning 注意
+::: tip 注意
 electron-egg: v3.4.0 之前版本，打包配置在package.json中。
 :::
 
