--- a/docs/01.v3/030.生成软件/030.图标修改.md
+++ b/docs/01.v3/030.生成软件/030.图标修改.md
@@ -73,6 +73,8 @@ config.windowsOption = {
 #### 命令一键生成
 > ee-core: v2.3.0
 
+TODO：待修复...
+
 框架提供：根据原图一键生成多种尺寸图片，并复制到指定目录。感谢[@CcSimple](https://github.com/CcSimple)
 ```bash
 npm run icon
