--- a/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
@@ -54,7 +54,7 @@ config.developmentMode = {
 };
 ```
 ###  开发者工具 
-当openAppMenu为false时，该功能无效，推荐使用openAppMenu来调出开发者工具栏。
+生产环境，该功能无效；推荐使用openAppMenu来调出开发者工具栏。
 ```javascript
 config.openDevTools = false;
 ```
