--- a/docs/01.v3/020.基础功能/040.通信/020.通信ipcRender.md
+++ b/docs/01.v3/020.基础功能/040.通信/020.通信ipcRender.md
@@ -43,9 +43,9 @@ const ipc = Renderer.ipcRenderer || undefined;
  */
 const isEE = ipc ? true : false;
 
-export default {
+export {
   Renderer, ipc, isEE
-}
+};
 ```
 ### API
 ###  ipc
