--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -5,6 +5,8 @@ permalink: /pages/a75f3c/
 article: false
 ---
 
+该模块负责界面渲染，以及与主进程通信。
+
 ###  代码目录
 ```
 ./frontend
@@ -14,6 +16,17 @@ article: false
 - 可以使用任意前端技术
 - 项目中前端模块只是demo，你可以随意修改或删除
 - `vue2`、`vue3`、`react`、`Angular`、`html`、`vite` 等等
+
+###  通信
+
+只需一个文件：[ipcRenderer.js](/pages/f4f62c/)
+
+你的前端项目需要引入该文件，才能和  `electron业务层` 通信
+
+```bash
+# 文件位置
+./electron-egg/frontend/src/utils/ipcRenderer.js
+```
 
 ###  开发环境
 开发环境下，渲染进程使用 `developmentMode` 配置。
@@ -45,14 +58,6 @@ article: false
       },
     }
   },
-```
-
-###  只需一个文件：ipcRenderer.js
-你的前端项目需要引入该文件，才能和  `electron业务层` 通信
-
-```bash
-# 文件位置
-./electron-egg/frontend/src/utils/ipcRenderer.js
 ```
 
 ###  启动
