--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -5,7 +5,13 @@ permalink: /pages/23649b/
 article: false
 ---
 
-# 常见问题
+## 常见问题
+
+这里总结了开发时遇到的常见问题，方便开发者快速找到解决方案。
+
+如果没有找到，还可以查查issue
+- [gitee issue](https://gitee.com/dromara/electron-egg/issues)
+- [github issue](https://github.com/dromara/electron-egg/issues)
 
 ###  1：打包时，下载资源超时：
 ```
