--- a/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
+++ b/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
@@ -9,7 +9,9 @@ article: false
 
 sqlite数据库（可选）
 
-如果不需要sqlite，请删除package.json中的better-sqlite3依赖包
+如果不需要sqlite，请删除package.json中的better-sqlite3依赖包。
+
+sqlite第三方包是c/c++写的，因此需要重新编译。请认真看以下教程和它的官方文档。
 
 ###  特点
 
