--- a/docs/07.功能/01.教程/01.介绍.md
+++ b/docs/07.功能/01.教程/01.介绍.md
@@ -34,7 +34,7 @@ git checkout -b demo remotes/origin/demo
 
 3. 安装并运行
 
-注：[better-sqlite3安装问题](/pages/c547b1/)
+demo中数据库部分可能会报错，请安装 `better-sqlite3` 包，[better-sqlite3安装教程](/pages/c547b1/)
 
 ```bash
 # 安装依赖
