--- a/docs/01.v3/010.快速入门/031.第三方使用.md
+++ b/docs/01.v3/010.快速入门/031.第三方使用.md
@@ -6,7 +6,7 @@ permalink: /pages/089f32/
 ---
 
 ###  作为模块使用
-如果您不想使用electorn-egg框架，但想使用它的API，只安装 **ee-core** 库即可。
+如果您不想使用 `electorn-egg` 框架，但想使用它的API，只安装 `ee-core` 库。
 
 ###  安装 ee-core
 > ee-core: v2.2.0
@@ -27,7 +27,7 @@ pnpm install ee-core
 </code-group>
 
 ### 项目中使用
-在您的项目入口文件，如 main.js中，添加如下代码：
+在您的项目入口文件，如 `main.js` 中，添加如下代码：
 ```javascript
 const { ElectronEgg } = require('ee-core');
 
@@ -35,7 +35,7 @@ const { ElectronEgg } = require('ee-core');
 new ElectronEgg('module');
 ```
 
-这样您就可以使用ee-core的提供的 **100+ API** 了。
+这样您就可以使用 `ee-core` 的提供的 **100+ API** 了。
 
 ### 更多API
 [API使用教程](/pages/1dbe35/)
