--- a/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
+++ b/docs/01.v3/010.快速入门/050.配置/01.基础配置.md
@@ -54,16 +54,18 @@ config.developmentMode = {
 };
 ```
 ###  开发者工具 
-生产环境，该功能无效；推荐使用openAppMenu来调出开发者工具栏。
+也可以使用openAppMenu来调出开发者工具栏。
 ```javascript
 config.openDevTools = false;
 ```
+
 ###  应用程序顶部菜单 
 ```javascript
 * boolean | string
 * true, false, 'dev-show'(dev环境显示，prod环境隐藏)
 config.openAppMenu = true;
 ```
+
 ###  主窗口
 ```javascript
 // 更多属性，见文档：https://www.electronjs.org/zh/docs/latest/api/browser-window#new-browserwindowoptions
