--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -11,7 +11,7 @@ article: false
 ```
 ./frontend
 ```
-###  说明
+###  特点
 
 - 可以使用任意前端技术
 - 项目中前端模块只是demo，你可以随意修改或删除
@@ -66,7 +66,7 @@ article: false
 ```bash
 # 1：【进入前端目录】，启动vue
 cd ./frontend
-npm run serve
+npm run dev
 
 # 2：【根目录】，启动electron服务
 npm run dev
@@ -140,16 +140,25 @@ file:///D:/www/xing/ee/public/dist/js/app.94339363.js
 
 `file://` 协议模式，请做如下修改：
 
-- vue 应用 
+- vue 
 
 编辑 `vue.config.js`文件
 ```javascript
 module.exports = {
-    publicPath: './', // 相对路径，file模式和web模式都可以使用
+  publicPath: './', // 相对路径，file模式和web模式都可以使用
 }  
 ```
 
-- react 应用 
+- vite 
+
+编辑 `vite.config.js`文件
+```javascript
+export default defineConfig(() => {
+  base: './',
+}  
+```
+
+- react - webpack  
 
 编辑 `webpack.config.js`文件
 ```javascript
@@ -162,10 +171,10 @@ module.exports = {
 
 - 其它前端技术类似。
 
-把 `项目部署的基础路径` 改为相对路径，或 能被访问到的路径（可用 [开发者工具栏](/pages/64001c/) 查看资源路径是否正确）
+把 `项目部署的基础路径` 改为 `相对路径`，或 能被访问到的路径（可用 [开发者工具栏](/pages/64001c/) 查看资源路径是否正确）
 
 #### web模式
-web模式（http/https）将会创建server服务来加载前端资源，兼容性好。
+web模式（http/https）将会创建server服务来加载前端资源，兼容性好，但会多创建一个server服务。
 
 可以使用`vue`、`react`、`cocos`、`Angular` 等各种前端技术，而无需做特殊修改。
 
