--- a/docs/01.v3/030.生成软件/010.构建.md
+++ b/docs/01.v3/030.生成软件/010.构建.md
@@ -54,7 +54,7 @@ npm run clean
 > electron-egg: v3.4.0
 查看 [builder.json](/pages/2df2e6/)
 
-::: warning 注意
+::: tip 注意
 1：请尽量让项目名唯一（electron-egg/package.json中name属性），防止和别人软件名称冲突
 
 2：打包失败，请查看[常见问题](/pages/23649b/)。
