--- a/docs/03.api/001.教程/001.使用说明.md
+++ b/docs/03.api/001.教程/001.使用说明.md
@@ -5,9 +5,9 @@ permalink: /pages/85c531/
 ---
 
 ###  介绍
-electron-egg框架核心功能由 **ee-core** 驱动。目前包含 **100+** api，极大的增强了框架能力。
+electron-egg框架核心功能由 `ee-core` 和 `ee-bin` 驱动。目前包含 **100+** api，极大的增强了框架能力。
 
-同样的，您可以将ee-core作为 **模块** 使用，详情见 [第三方使用](/pages/1dbe35/)
+同样的，您可以将 `ee-core` 作为 **模块** 使用，详情见 [第三方使用](/pages/1dbe35/)
 
 ###  模块列表
 
@@ -15,7 +15,7 @@ electron-egg框架核心功能由 **ee-core** 驱动。目前包含 **100+** api
 插件模块。
 
 #### bin
-命令行模块。
+命令行模块（废弃），请使用 `ee-bin` 库。
 
 #### config
 可以 获取/设置 system.json库中的数据。
