--- a/docs/01.v3/030.生成软件/030.图标修改.md
+++ b/docs/01.v3/030.生成软件/030.图标修改.md
@@ -71,13 +71,23 @@ config.windowsOption = {
 
 ### 图标工具
 #### 命令一键生成
-> ee-core: v2.3.0
+> ee-bin: v1.1.0
 
-TODO：待修复...
+::: tip 注意
+如果安装依赖失败，那么请使用下面第二种方法。
+:::
 
 框架提供：根据原图一键生成多种尺寸图片，并复制到指定目录。感谢[@CcSimple](https://github.com/CcSimple)
 ```bash
-npm run icon
+# 安装 ee-bin
+npm install ee-bin
+
+# 安装依赖
+npm install icon-gen -D
+
+# 命令
+ee-bin icon
+// ee-bin icon -i /public/images/logo.png -o /build/icons/
 ```
 
 参数
@@ -88,7 +98,6 @@ npm run icon
 - -img/-images: win窗口图标/tray 图片生成的路径 （默认：/public/images/）
 
 其中 -s 图片大小中的 16 处理成 `tray.png`，32 处理成 `logo-32.png`
-
 
 #### 第三方软件
 
