--- a/docs/01.v3/050.其它/030.更新记录.md
+++ b/docs/01.v3/050.其它/030.更新记录.md
@@ -6,6 +6,17 @@ article: false
 ---
 
 # 更新记录
+### 3.6.0
+1. 【增加】新增 ee-bin 库，安装到dev依赖，减少安装包大小。
+2. 【增加】demo分支用 vue3 + vite重写，备份demo为demo-vue2。
+3. 【优化】优化rd命令，参数可扩展，错误提示优化。
+4. 【优化】优化encrypt命令，可指定config文件，输出目录。
+5. 【优化】优化clean命令，可指定删除目录。
+6. 【优化】优化icon命令，可单独安装依赖库，避免某些系统无法安装而报错。
+7. 【优化】去除devtool生产环境的校验。
+7. 【废弃】ee-core bin脚本去除，用ee-bin代替。
+8. 【升级】升级ee-core到v2.4.0
+
 ### 3.5.0
 1. 【增加】新增ee-core icon 命令，一键生成应用所有类型的logo。
 2. 【优化】优化logo名称，以兼容新的icon命令。
