--- a/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
+++ b/docs/01.v3/020.基础功能/014.前端模块/01.介绍.md
@@ -5,7 +5,9 @@ permalink: /pages/a75f3c/
 article: false
 ---
 
-该模块负责界面渲染，以及与主进程通信。
+该模块负责界面`渲染`，以及与主进程`通信`，支持`任何`前端技术。
+
+示例代码中，采用vue3 + vite4 。当然，你可以选择自己喜欢的技术栈。
 
 ###  代码目录
 ```
