--- a/docs/01.v3/010.快速入门/040.快速开始.md
+++ b/docs/01.v3/010.快速入门/040.快速开始.md
@@ -31,7 +31,8 @@ article: false
 
 ### 开发者模式
 ###  软件界面
-进入“frontend”目录，开发软件界面；支持任意前端技术，如果vue、react、angular、html等
+进入“frontend”目录，开发软件界面；支持任意前端技术，如`vue`、`react`、`angular`、`html`、`vite` 等
+
 ```bash
 # 进入【前端目录】
 cd frontend 
@@ -40,14 +41,16 @@ cd frontend
 npm install
 
 # 启动服务
-npm run serve
+npm run dev
+# npm run serve (old)
 ```
 ::: tip
-注：如果启动的前端服务不是：http://localhost:8080/  请先配置：[config](/pages/f7cbf9/) 文件中的“开发模式”
+注：如果启动的前端服务不是：http://localhost:8080/  请先配置：[config](/pages/f7cbf9/) 文件中的 `开发模式`
 :::
 
 ###  业务逻辑
-“electron”目录，业务开发；常规业务逻辑、调用操作系统api、访问远程服务器等
+`electron` 目录，业务开发；常规业务逻辑、调用操作系统api、访问远程服务器等
+
 在项目【根目录】启动服务
 ```bash
 # 启动后端服务
@@ -56,6 +59,7 @@ npm run dev
 # 热重载模式
 npm run reload
 ```
+
 ### Demo
 框架集成了许多功能demo示例，方便开发者快速入门。查看[demo文档](/pages/132909/)
 
