--- a/docs/06.支持/018.个人赞助.md
+++ b/docs/06.支持/018.个人赞助.md
@@ -9,7 +9,7 @@ article: false
 
 **Electron-Egg** 从 `20 年末`开源至今，已经广泛应用于医疗、学校、政务、股票交易、ERP、娱乐、企业等领域客户端。
 
-我们会长期坚持去完善这个项目，希望 Electron-Egg 能够服务更多的开发者及公司。
+我们会长期坚持去完善这个项目，希望 `Electron-Egg` 能够服务更多的开发者及公司。
 
 您可以通过如下方式支持我们：
 
