--- a/docs/03.api/005.ee-bin/010.bin.md
+++ b/docs/03.api/005.ee-bin/010.bin.md
@@ -8,10 +8,10 @@ permalink: /pages/e1816f/
 > ee-bin：v1.1.0
 
 ### 介绍
-命令行模块。从`ee-core`包中分离出来，仅在开发环境使用。同时也减小了安装包大小。
+命令行模块。从`ee-core`包中分离出来，仅在开发环境使用，同时也减小了安装包大小。
 
 ### 从ee-core升级ee-bin
-`ee-core` v2.4.0之后，将不在提供bin功能，请做如下修改：
+`ee-core v2.4.0` 之后，将不在提供bin功能，请做如下修改：
 
 ```bash
 # 安装 ee-bin
@@ -29,13 +29,13 @@ npm i ee-bin -D
 ### API列表
 
 ### rd
-- dist-dir - 前端资源所在目录，默认：`./frontend/dist`
+- dist-dir - 前端资源所在目录，默认：./frontend/dist
 
 ::: tip 注意
 ee-core的中参数为 `dist_dir`，注意修改。
 :::
 
-rd命令会把 frontend/dist 复制到 /public/dist ; 服务最终加载的是 /public/dist前端资源。
+rd命令会把 `frontend/dist` 复制到 `/public/dist` ， 服务最终加载的是 `/public/dist` 前端资源。
 
 frontend目录代码不会被打包，防止源码泄露。
 ```bash
@@ -43,10 +43,10 @@ ee-core rd --dist-dir=./frontend/dist
 ```
 
 ### encrypt
-- config - 配置文件路径，默认：`./electron/config/encrypt.js`
-- out - 加密后的输出目录，默认：`./public`
+- config - 配置文件路径，默认：./electron/config/encrypt.js
+- out - 加密后的输出目录，默认：./public
 
-将 electron/ 复制到 /public/electron ; 然后对其加密。
+将 `electron/` 复制到 `/public/electron` , 然后对其加密。
 
 electron目录代码不会被打包，防止源码泄露。
 ```bash
@@ -55,9 +55,9 @@ ee-core encrypt --config ./electron/config/encrypt.js --out ./public
 ```
 
 ### clean
-- dir - 需要删除的目录，默认：`./public/electron`
+- dir - 需要删除的目录，默认：./public/electron
 
-清理加密代码（/public/electron目录）
+清理加密代码（`/public/electron` 目录）
 ```bash
 ee-core clean
 ee-core clean --dir ./public/electron
