--- a/docs/03.api/003.ee-core/010.bin.md
+++ b/docs/03.api/003.ee-core/010.bin.md
@@ -16,6 +16,7 @@ article: false
 ### API列表
 
 ### rd
+> ee-core：v2.4.0 废弃
 - dist_dir - 资源所在目录
 
 rd命令会把 frontend/dist 复制到 /public/dist ; 服务最终加载的是 /public/dist前端资源。
@@ -26,6 +27,7 @@ ee-core rd --dist_dir=./frontend/dist
 ```
 
 ### encrypt
+> ee-core：v2.4.0 废弃
 将 electron/ 复制到 /public/electron ; 然后对其加密。
 
 electron目录代码不会被打包，防止源码泄露。
@@ -34,7 +36,10 @@ ee-core encrypt
 ```
 
 ### clean
+> ee-core：v2.4.0 废弃
+
 清理加密代码（/public/electron目录）
+
 ```bash
 ee-core clean
 ```
