--- a/docs/01.v3/010.快速入门/060.命令.md
+++ b/docs/01.v3/010.快速入门/060.命令.md
@@ -8,7 +8,7 @@ permalink: /pages/b61a92/
 ```bash
 # 开发者模式
 # 1：【进入前端目录】，启动前端服务
-cd electron-egg/frontend && npm install && npm run serve
+cd electron-egg/frontend && npm install && npm run dev
 # 2：【根目录】，启动后端服务
 npm run dev
 
