--- a/docs/01.v3/020.基础功能/081.dll使用.md
+++ b/docs/01.v3/020.基础功能/081.dll使用.md
@@ -9,6 +9,10 @@ Dll文件是动态链接库，桌面软件中经常需要使用。
 
 因为该库的调用，涉及许多工具的安装，因此不集成到框架中；但本文提供完整的安装使用说明，供大家参考。
 
+::: tip 避坑指南
+32位的 `dll` 必须在 32位`node`、 32位`electron` 上调用
+:::
+
 ### 准备环境
 ```bash
 # 编译工具
