--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -138,6 +138,20 @@ Uncaught Exception:
 Error: net::ERR CONNECTION REFUSED at SimpleURLLoaderWrapper.<anonymous> (electron/js2c/browser init.js:105:7068)
 ```
 
+> 报错5：加密模块报错
+
+原因：bytenode对electron的版本支持差异化
+
+处理：请调整electron版本，或 bytenode版本
+
+```javascript
+A JavaScript error occurred in the main process
+Uncaught Exception:
+Error: Cannot find module xxx
+Require stack:
+- xxxx/node_module/bytenode/lib/index.js
+```
+
 ###  4：cmd控制台乱码
 参照：[中文乱码](https://cloud.tencent.com/developer/article/1835811)
 
