--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -416,3 +416,18 @@ error Command failed with exit code 127.
 // 用vs code打开把行尾序列由CRLF改成LF就可以了
 node_modules/ee-core/bin/tools.js
 ```
+
+### 20：encrypt 命令时报错
+```javascript
+error Cannot find module 'node:assert/strict'
+- xxx ....../electron-egg/node_modules/bytenode/lib/index.js
+- xxx ....../electron-egg/node_modules/ee-bin/tools/encrytp.js
+```
+原因：bytenode 模块的bug
+
+解决方案：
+```javascript
+// 安装一个指定版本 v1.3.6
+npm uninstall bytenode
+npm install bytenode@1.3.6
+```
