--- a/docs/01.v3/020.基础功能/012.生命周期.md
+++ b/docs/01.v3/020.基础功能/012.生命周期.md
@@ -23,7 +23,7 @@ new ElectronEgg();
 ```
 
 #### 生命周期
-`./electron/index.js` 实例化会触发该模块。
+`new ElectronEgg()` 实例化会触发 `./electron/index.js` 模块，core功能加载顺序如下：
 
 ```javascript
 // 引入基础 Application 类
