--- a/docs/07.功能/01.教程/01.介绍.md
+++ b/docs/07.功能/01.教程/01.介绍.md
@@ -16,6 +16,14 @@ permalink: /pages/132909/
 
 **特效** ：提供一些软件特效的实现demo
 
+### 分支说明
+- `demo` 功能示例分支，UI使用vue3 + vite4
+- `demo-vue2` 功能示例分支，UI使用vue2（不在维护）
+- `dev_v3` electron-egg v3版本开发分支
+- `master` 主分支
+- `master_v2` electron-egg v2版本主分支（不在维护）
+- 其它分支忽略
+
 ### 如何运行
 
 1. 下载项目
