--- a/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
+++ b/docs/01.v3/020.基础功能/050.数据库/020.sqlite数据库.md
@@ -29,6 +29,7 @@ npm i node-gyp -g
 npm install --save-dev @electron/rebuild
 
 # （必须）重新构建适合当前操作系统的sqlite
+npm i better-sqlite3@8.4.0
 npm run re-sqlite
 
 # 如果sqlite报错 ...tools之类的
