--- a/docs/01.v3/030.生成软件/010.构建.md
+++ b/docs/01.v3/030.生成软件/010.构建.md
@@ -95,10 +95,7 @@ npm run build-lp-64 (64位 pacman包)
 注释：如果你想了解更多平台打包功能，请参照：[https://www.electron.build/](https://www.electron.build/)
 
 ###  第四步：找到程序
-```
-# 这种是临时文件，无法使用，忽略它。
-临时文件：out/win-unpacked
-
+```bash
 # 程序
 目录：electron-egg/out
 Windows安装包：out/electron-egg-windows-2.0.3.exe  
@@ -106,7 +103,17 @@ Windows免安装包：out/ee-win-3.0.1-ia32.7z
 Mac软件包：out/xxxx.dmg
 Linux软件包：out/xxx.deb 
 ```
-### 2. 其它修改
+
+### 经验
+`window`、`macos` 打包一般没有问题。`Linux`平台由于发行版太多，建议优先构建下面的安装包：
+
+- Ubuntu 打deb包
+- UOS统信 打deb包
+- Debian 打deb包
+- Centos 打rpm包
+- 银河麒麟v10(sp1) 打deb包
+
+### 其它修改
 
 1. 修改应用名称
 ```bash
