21：忽略ssl证书错误

--- a/docs/01.v3/060.常见问题.md
+++ b/docs/01.v3/060.常见问题.md
@@ -431,3 +431,19 @@ error Cannot find module 'node:assert/strict'
 npm uninstall bytenode
 npm install bytenode@1.3.6
 ```
+
+### 21：忽略ssl证书错误
+```javascript
+ERROR:ssl_client_impl.cc(983) handshake failed; returned -1, SSL error code 1, net_error
+```
+原因：开发者可能加载了不安全的地址
+
+解决方案：
+```javascript
+// 生命周期文件 electron/index.js
+const {app: electronApp} = require("electron");
+
+  async ready () {
+    electronApp.commandLine.appendSwitch('ignore-certificate-errors');
+  }
+```
