--- a/docs/01.v3/010.快速入门/030.安装.md
+++ b/docs/01.v3/010.快速入门/030.安装.md
@@ -19,7 +19,7 @@ git clone https://github.com/dromara/electron-egg.git
 ```
 
 ###  安装
-请使用 `npm`，不推荐 `yarn`、`cnpm`。有问题先看文档：[**常见问题**](/pages/23649b/)
+请使用 `npm`，不推荐 `yarn`、`cnpm` ，有问题先看文档：[**常见问题**](/pages/23649b/)
 
 <code-group>
   <code-block title="npm" active>
