--- a/docs/01.v3/030.生成软件/020.代码加密.md
+++ b/docs/01.v3/030.生成软件/020.代码加密.md
@@ -19,7 +19,8 @@ npm run clean
 ```
 ### 打包时，过滤源代码
 ::: warning 注意
-未使用加密，请删除 **"!electron/"** 。
+加密，请添加 **"!electron/"** 
+未加密，请删除 **"!electron/"** 
 :::
 
 打开package.json 或 builder.json文件，修改 **build.files** 数组属性，添加 **"!electron/"，如下：**
