--- a/docs/01.v3/030.生成软件/010.构建.md
+++ b/docs/01.v3/030.生成软件/010.构建.md
@@ -27,7 +27,7 @@ frontend目录代码不会被打包，防止源码泄露。
 ```
 
 ###  第二步：代码加密 （必看）
-如果执行过加密，会生成加密代码：/public/electron ，框架优先读取它，源代码则不生效。
+加密后，会生成加密代码：/public/electron ，框架优先读取它，源代码则不生效。
 
 开发阶段如果发现编写的代码不生效，请记得删除加密文件。
 
