--- a/docs/04.其它/010.案例.md
+++ b/docs/04.其它/010.案例.md
@@ -9,6 +9,10 @@ article: false
 
 如果你想展示项目，请联系我（qq：530353222）
 
+###  Alex-Wallpaper
+![aw-3.jpg](/img/electron-egg/aw/aw-3.png)
+![aw-2.png](/img/electron-egg/aw/aw-2.png)
+
 ###  时音音乐
 ![QQ图片20221128194242.jpg](/img/electron-egg/showcase/p1.png)
 ![QQ截图20221128194313.png](/img/electron-egg/showcase/p2.png)
